...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.teams.InviteTeamToWalkActivity">

    <EditText
        android:id="@+id/et_proposed_day_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_proposed_day_invite_team_to_walk"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="25sp"
...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_proposed_day_invite_team_to_walk_activity" />

    <EditText
        android:id="@+id/et_proposed_time_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_proposed_time_invite_team_to_walk"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
...
        app:layout_constraintLeft_toRightOf="@+id/et_proposed_time_invite_team_to_walk_activity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_proposed_time_invite_team_to_walk_activity"
        app:layout_constraintHorizontal_bias="0.2" />

    <Button
        android:id="@+id/btn_send_invitation_to_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_team_invite_team_to_walk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
