<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="proposed_day_invite_team_to_walk">Proposed Day</string>
    <string name="proposed_time_invite_team_to_walk">Proposed Time</string>
    <string name="hint_proposed_day_invite_team_to_walk">MM/DD/YYYY</string>
    <string name="hint_proposed_time_invite_team_to_walk">HH:MM</string>
    <string name="send_to_team_invite_team_to_walk">Send to Team</string>
    <string name="menu_item_send_to_team">Propose to Team</string>
    <string name="am_text">AM</string>
    <string name="pm_text">PM</string>
    <string name="am_pm_image_description">Image that indicates AM/PM</string>
</resources>