...
        android:id="@+id/layout_received_invitation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ListView
        android:id="@+id/invitationList"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonAccept"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_accept_team_invitation"
        android:background="@drawable/my_button_bg"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonDecline"
        app:layout_constraintTop_toBottomOf="@id/invitationList"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonDecline"
        android:layout_width="wrap_content"
...
